<resources>
    <string name="app_name">Off The Top</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="toolbar_history">History"</string>
    <string name="bottombar_home">Home"</string>
    <string name="bottombar_appointment">Appointment"</string>
    <string name="appointment_barber">Choose your barber"</string>
    <string name="appointment_date">Choose your date"</string>
    <string name="appointment_service">Choose your service"</string>
    <string name="appointment_confirmation">Confirm your appointment"</string>
    <string name="bottombar_store">Store"</string>
    <string name="bottombar_advisor">Advisor"</string>
    <string name="sign_up_for_an_off_the_top_account">Sign up for an Off The Top account</string>
    <string name="sign_in_to_your_off_the_top_account">Sign in to your Off The Top account</string>
    <string name="welcome_to_off_the_top">Welcome to off the top</string>
    <string name="you_can_book_a_barber_check_your_appointment_and_buy_items_from_off_the_top_store">You can book a barber, check your appointment and buy items from off the top store.</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="set_appointment">Set Appointment</string>
    <string name="store">Store</string>
    <string name="click_here_to_upload_a_photo_of_your_latest_hairtrend_and_get_elected_as_haircut_of_the_month_your_next_haircut_will_be_on_us_then">Click on promotions to upload a photo of your latest hairtrend and get elected as \'haircut of the month\'. Your next haircut will be on us then.</string>
    <string name="promotion">Promotion</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="search_for_a_different_location">Search for a different location</string>
    <string name="hair_gel">Hair-Gel</string>
    <string name="men">Men</string>
    <string name="hair_wax">Hair-Wax</string>
    <string name="unisex">Unisex</string>
    <string name="conditioner">Conditioner</string>
    <string name="shampoo">Shampoo</string>
    <string name="hh_mm">HH:MM</string>
    <string name="time">Time</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="date">Date</string>
    <string name="try_out_hairstyles_with_our_ar_hairstyle_function">Try out hairstyles with our AR hairstyle function!</string>
    <string name="try_it_now">Try it now!</string>
    <string name="location">Location</string>
    <string name="barber">Barber</string>
    <string name="service">Service</string>
    <string name="service_details">Service Details</string>
</resources>
