<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".StoreActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.OffTheTop.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_menu"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/men"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkbox_menGel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/hair_gel"
                    android:textColor="@color/colorWhite" />

                <CheckBox
                    android:id="@+id/checkbox_menWax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/hair_wax"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/unisex"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <CheckBox
                    android:id="@+id/checkbox_MenCon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/conditioner"
                    android:textColor="@color/colorWhite" />

                <CheckBox
                    android:id="@+id/checkbox_MenShamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/shampoo"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/products"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:divider="#000"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:labelVisibilityMode="unlabeled"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/colorWhite"
            app:itemTextColor="@color/colorWhite"
            app:menu="@menu/back_bottombar_menu" />
    </LinearLayout>
</FrameLayout>